[3.1] fixed query for new elasticsearch version